src/objects/Question__c.object
<CustomObject>
    <description>Object used to store the Question for 

1. Account Profile 
2. Contact Profile
3. Global or Regional Parent Questions for Account Profile and Contact Profile</description>
    <fields>
        <fullName>BST_ANSWER_OPTIONS__c</fullName>
        <description>BST - field dynamically shown on the lightning component if Answer type = Pick-list or Multi-picklist. This fiels is used to provide the possible answers that can be selected in the question in My Profile screens under Account or Contact. the separator that needs to be used between values = &quot;~##~&quot;</description>
        <inlineHelpText>Field used to provide the possible values that can be chosen if the Question Response type = Picklist or Multipicklist. The separator that needs to be used between the options is ~##~</inlineHelpText>
        <label>Answer Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BST_CATEGORY__c</fullName>
        <description>The pick list is dependent on Major Category pick-list. This field can be used to group questions into logical streams and is used for grouping into My Profile/all Profile screens under Account and Contact</description>
        <inlineHelpText>Field dependent on selection made in Major Category. The value allows logical grouping of the questions</inlineHelpText>
        <label>Secondary Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_MAJOR_CATEGORY__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Competitive information</fullName>
                </value>
                <value>
                    <fullName>CRRT Baxter Insight</fullName>
                </value>
                <value>
                    <fullName>CRRT Competitive Insight</fullName>
                </value>
                <value>
                    <fullName>General Account information</fullName>
                </value>
                <value>
                    <fullName>HD Competitive Insight</fullName>
                </value>
                <value>
                    <fullName>PD Baxter Insight</fullName>
                </value>
                <value>
                    <fullName>PD Competitive Insight</fullName>
                </value>
                <value>
                    <fullName>Vial-Mate, Frozen, Vanco Dex</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Baxter Data</fullName>
                </value>
                <value>
                    <fullName>Hospital Potential</fullName>
                </value>
                <value>
                    <fullName>Profiling</fullName>
                </value>
                <value>
                    <fullName>Clinical Studies</fullName>
                </value>
                <value>
                    <fullName>Home Based Hemodialysis Therapies</fullName>
                </value>
                <value>
                    <fullName>Key Metrics</fullName>
                </value>
                <value>
                    <fullName>Unit Assessment</fullName>
                </value>
                <value>
                    <fullName>Treatment Criteria</fullName>
                </value>
                <value>
                    <fullName>Delivered CRRT Dose</fullName>
                </value>
                <value>
                    <fullName>Fluid Overload</fullName>
                </value>
                <value>
                    <fullName>Recirculation</fullName>
                </value>
                <value>
                    <fullName>SLED Threat</fullName>
                </value>
                <value>
                    <fullName>Common Settings</fullName>
                </value>
                <value>
                    <fullName>Anticoagulation</fullName>
                </value>
                <value>
                    <fullName>Additional Information</fullName>
                </value>
                <value>
                    <fullName>Unit Specific Information</fullName>
                </value>
                <value>
                    <fullName>Short Term Catheter</fullName>
                </value>
                <value>
                    <fullName>Prismaflex Custom Mode</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_CHILD_STATUS__c</fullName>
        <formula>Text  (BST_PARENT_QUESTION__r.BST_STATUS__c )</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_COUNTRY__c</fullName>
        <description>The value is fetched from Global Value Set BST_COUNTRY_GLOBAL. This field is used in visibility fielters for My Profile/All profile views and also this is used in sharing rules so that the users can see the correct set of questions based on the country/countries they cover</description>
        <inlineHelpText>The country where the question needs to be visible</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BST_Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_END_DATE__c</fullName>
        <description>This is to capture the expiration date of the question. Based on this date we have automatic process to set the question inactive (if the date is in the past) so that the system automatically maintains the status of questions</description>
        <inlineHelpText>The date when the need to fill in the question is due. Once this date is passed the Question automatically becomes Inactive</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BST_EXPIRED_RESPONSES__c</fullName>
        <description>Calculated field (roll up summary) based on the related answers to the question that are expired (today - last update date of the answer &gt; Response Valid time in Days)</description>
        <inlineHelpText>The field show all the question related answers where the answer valid time is expired. This is auto calculated by the system looking at the Response valid time in Days defined on the question level</inlineHelpText>
        <label>Expired Response</label>
        <summaryFilterItems>
            <field>Account_Profile__c.BST_EXPIRED__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Profile__c.BST_Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BST_INITIATIVE__c</fullName>
        <description>This field is used to capture the initiative of the question (global, regional, EMEA etc)
Will be mainly used for reporting and segregation of Parent Questions</description>
        <inlineHelpText>Field used to mark if a parent question is Globally applicable, For a certain region or for a smaller group of countries. Will be useful to local admins and for reporting purposes</inlineHelpText>
        <label>Initiative</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global Initiative</fullName>
                </value>
                <value>
                    <fullName>Local Initiative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_MAJOR_CATEGORY__c</fullName>
        <description>BST - pick list dependent on Country. Used to allow grouping of questions into logical buckets</description>
        <inlineHelpText>Pick list used to group questions in logical segments. The grouping will be done into My Profile/All Profile</inlineHelpText>
        <label>Major Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CRRT</fullName>
                </value>
                <value>
                    <fullName>Surgery</fullName>
                </value>
                <value>
                    <fullName>Anesthesia</fullName>
                </value>
                <value>
                    <fullName>Renal</fullName>
                </value>
                <value>
                    <fullName>Advanced Surgery</fullName>
                </value>
                <value>
                    <fullName>Medical Affairs (MSL)</fullName>
                </value>
                <value>
                    <fullName>Renal Chronic Census</fullName>
                </value>
                <value>
                    <fullName>HP - Fluid Systems</fullName>
                </value>
                <value>
                    <fullName>Nurse Worksheet</fullName>
                </value>
                <value>
                    <fullName>Anestetics</fullName>
                    <isActive>false</isActive>
                    <label>Anestetics</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_ORDER__c</fullName>
        <description>The value set in the Order field will drive the order in with the questions will be shown in My Profile/All Profile sections. This is the 3rd condition. Question are ordered by Major Category, Secondary Category and then by the Order field</description>
        <inlineHelpText>This field is used to capture the Order of the question.</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_PARENT_QUESTION__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BST - This field is used to lookup to the parent question. the lookup has a filter to retrieve only Active Parent questions where the record type = Global Question (logic done in the lightning component)</description>
        <inlineHelpText>Field used to link a local question to a global/regional or cluster initiative. For example if on global level we need to store the number of beds, this question will be created as Account Question by each country and then linked to the global question</inlineHelpText>
        <label>Parent Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BST_PRIVATE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BST - checkbox used to drive visibility into the All Profile sections</description>
        <inlineHelpText>Field used to drive visibility into the All Profile Sections. Records where checkbox = TRUE are seen only by users that are member of at least one of the Groups defined on the Question level. Users outside the groups on the Question level will not see it</inlineHelpText>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BST_PROFILE_TYPE__c</fullName>
        <description>BST - picklist set on gloabl question and used on the lookup filter from child, so that Account Question record type can be linked only to Account Parent types and Contact question record type can be linked only to Contact Parent questions</description>
        <inlineHelpText>Value set on Global Questions (Parent Questions) in order to allow only childs of the correct type to be linked to parents (Account Question record type linked to Account Parent; Contact Question Record Type linked to Contact Parent)</inlineHelpText>
        <label>Profile Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_QUESTION_LOCALE__c</fullName>
        <description>This is used to capture the translation of the question. used for translation of the Question into local Language. This will be shown to users using language different than ENG</description>
        <inlineHelpText>Field used by countries using the app in a language different than English. The value in this field should be the translation into local language of the Question text.</inlineHelpText>
        <label>Question Localised</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BST_QUESTION_STATEMENT__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This field requires unique value for each record.</inlineHelpText>
        <label>Question Statement</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BST_QUESTION_TEXT_ONLY__c</fullName>
        <description>Stored only Questions without the sequence number</description>
        <formula>IF(ISNUMBER(LEFT(BST_QUESTION_STATEMENT__c,1)), (IF(ISNUMBER(TEXT(FIND(&quot;.&quot;, BST_QUESTION_STATEMENT__c,0))), RIGHT(BST_QUESTION_STATEMENT__c,(LEN(BST_QUESTION_STATEMENT__c)- FIND(&quot;.&quot;, BST_QUESTION_STATEMENT__c,0))),&quot;&quot;)),BST_QUESTION_STATEMENT__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Text Only</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_QUESTION_TYPE__c</fullName>
        <description>BST - picklist set on Global Question (parent Question) to allow categorization of the initiative in like Global, REgional, cluster level etc. Mainly important for reporting</description>
        <inlineHelpText>Picklist to allow categorization of Global Questions (Parent Question) into groups like Global, Regional, Cluster initiatives etc</inlineHelpText>
        <label>Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benelux Initiative</fullName>
                </value>
                <value>
                    <fullName>EMEA Initiative</fullName>
                </value>
                <value>
                    <fullName>Global Initiative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_RESPONSE_TYPE__c</fullName>
        <description>BST - This is a picklist used to capture the response type of any question. It allows Date, Number, Picklist, Multipicklist</description>
        <inlineHelpText>Field used to define what type of answer can be provided for the question. Can be only one of the following: Date, Number, Picklist or Multipicklist</inlineHelpText>
        <label>Response Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Multi Picklist</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_RESPONSE_VALID_TIME__c</fullName>
        <description>BST - this number (in days) is the time an answer will be valid from the moment it is filled in before it is maked as expired in My Profile/All Profile</description>
        <inlineHelpText>Number of days that a response will be considered as valid before it is marked as expired on the Question in My Profile section. Auto calculated based on last updated date compared to the current date and vs the value in this field</inlineHelpText>
        <label>Response Valid Time(in days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_SALESFORCE_GROUP__c</fullName>
        <description>BST - this multipicklist is used for visibility filter in My profile sections on Accounts and Contacts. Based on the selections made here and the groups membership set on user level, the question is available or not to the user in My Profile section</description>
        <inlineHelpText>2 or 3 letters acronyms that define the Franchises or user groups in countries. The values selected will make the question editable only by users that are part of at least one of the selected groups</inlineHelpText>
        <label>Baxter User Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>HD</fullName>
                </value>
                <value>
                    <fullName>PD</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>MSL</fullName>
                </value>
                <value>
                    <fullName>Hospital Products</fullName>
                </value>
                <value>
                    <fullName>Renal Chronic</fullName>
                </value>
                <value>
                    <fullName>Renal Acute</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_SALES_PROCESS__c</fullName>
        <description>Holds the Stage Process Name when Questions are for Opportunity milestone. Not used at this moment in BOOST. May be used in the future for Opportunities</description>
        <inlineHelpText>Not applicable in BOOST at the moment</inlineHelpText>
        <label>Sales Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACT</fullName>
                </value>
                <value>
                    <fullName>Bed Conversion</fullName>
                </value>
                <value>
                    <fullName>BioSurgery</fullName>
                </value>
                <value>
                    <fullName>CCOE</fullName>
                </value>
                <value>
                    <fullName>Competitive Gain</fullName>
                </value>
                <value>
                    <fullName>Dose-edge</fullName>
                </value>
                <value>
                    <fullName>ICNet</fullName>
                </value>
                <value>
                    <fullName>Infusion</fullName>
                </value>
                <value>
                    <fullName>Nutrition Clinimix</fullName>
                </value>
                <value>
                    <fullName>Nutrition Compounder</fullName>
                </value>
                <value>
                    <fullName>Nutrition Compounder Resign</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Revenue at Risk</fullName>
                </value>
                <value>
                    <fullName>Same Store Sales</fullName>
                </value>
                <value>
                    <fullName>Strategic Account Executive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_STAGE_NAME__c</fullName>
        <description>Holds the Stage Name when Questions are for Opportunity milestone. It should match with the values of Opportunity Stage Name.</description>
        <inlineHelpText>Not Applicable for BOOST at the moment</inlineHelpText>
        <label>Stage Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_START_DATE__c</fullName>
        <description>This is to capture the start date of the question. Based in this we have automated process to set the status as active</description>
        <inlineHelpText>The start date from when the Question can be considered as active and applicable to be filled in by users under My Profile section</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BST_STATUS__c</fullName>
        <description>BST - Status of the question. Drive visibility in My Profile/All profile since only active questions are shown on there. Inactive questions can be reported on. Automatic logic based on Start Date/End date to automatically change the status of a question to Active/Inactive based on the current date compared to Start and End Dates</description>
        <inlineHelpText>Status of the question drives visibility in My Profile/All Profile. Only active questions are shown to users for data insert. Inactive questions can be reported on but will not be shown for data gathering</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_TOTAL_RESPONSE__c</fullName>
        <description>BST - roll up summary that tracks how many records have been profiled (accounts or contacts). It tracks basically on how many records (account or contacts) users have provided answers to the question</description>
        <inlineHelpText>Automatic calculated field that display for how many customers we have filled in the question</inlineHelpText>
        <label>Total Response</label>
        <summaryFilterItems>
            <field>Account_Profile__c.BST_Selected_Answer__c</field>
            <operation>notEqual</operation>
            <value>Null</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Profile__c.BST_Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BST_TYPE__c</fullName>
        <description>This is a formula field used to capture the value from BST_STAGE_NAME__c</description>
        <formula>BST_STAGE_NAME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Question__c</fullName>
        <label>Competitor Question</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Competitor (optional). Please select an Account with a &apos;Competitor&apos; Record Type.</description>
        <inlineHelpText>Related Competitor (optional). Please select an Account with a &apos;Competitor&apos; Record Type.</inlineHelpText>
        <label>Competitor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>BST_Competitor</value>
            </filterItems>
            <infoMessage>Please select an Account with a &apos;Competitor&apos; Record Type.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Linked_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Questions (Linked Question)</relationshipLabel>
        <relationshipName>Questions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>BST_QUESTION_STATEMENT__c</columns>
        <columns>BST_SALESFORCE_GROUP__c</columns>
        <columns>BST_ANSWER_OPTIONS__c</columns>
        <columns>BST_START_DATE__c</columns>
        <columns>BST_END_DATE__c</columns>
        <columns>BST_STATUS__c</columns>
        <columns>BST_TYPE__c</columns>
        <columns>BST_COUNTRY__c</columns>
        <columns>BST_CATEGORY__c</columns>
        <columns>BST_INITIATIVE__c</columns>
        <columns>BST_MAJOR_CATEGORY__c</columns>
        <columns>BST_ORDER__c</columns>
        <columns>BST_PARENT_QUESTION__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ques-{0000}</displayFormat>
        <label>Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <recordTypes>
        <fullName>BST_ACCOUNT_PROFILE_QUESTION</fullName>
        <active>true</active>
        <description>Used for  Account Profile Functionality</description>
        <label>Account Profile Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>BST_CONTACT_PROFILE_QUESTION</fullName>
        <active>true</active>
        <description>Used for Contact Profile Questions</description>
        <label>Contact Profile Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>BST_Global_Question</fullName>
        <active>true</active>
        <description>Used as a parent question</description>
        <label>Global Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>Competitor_Information</fullName>
        <active>true</active>
        <description>Information on Baxter competitors</description>
        <label>Competitor Information</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>BST_Global_Record_Type</fullName>
        <active>true</active>
        <description>This validation makes sure that  Question type and profile type fields are populated if the record type is Global Question</description>
        <errorConditionFormula>AND (RecordType.DeveloperName  = &quot;BST_Global_Question&quot;, OR( ISBLANK(TEXT(BST_QUESTION_TYPE__c)) || ISBLANK(TEXT(BST_PROFILE_TYPE__c))))</errorConditionFormula>
        <errorMessage>Question Type and Profile Type are mandatory for Record Type : Global Question</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BST_Response_Valid_Days</fullName>
        <active>false</active>
        <description>This validation makes sure that the response Valid date should never be blank while saving a record.</description>
        <errorConditionFormula>ISBLANK(BST_RESPONSE_VALID_TIME__c)</errorConditionFormula>
        <errorMessage>The Response Valid Time(In days) field can not be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BST_Start_And_End_Date_Criteria</fullName>
        <active>true</active>
        <description>This is added to make sure that the Start Date is not past the End Date</description>
        <errorConditionFormula>BST_START_DATE__c  &gt;  BST_END_DATE__c</errorConditionFormula>
        <errorDisplayField>BST_START_DATE__c</errorDisplayField>
        <errorMessage>Please correct the errors.The Start Date can not be greater than End Date .</errorMessage>
    </validationRules>
</CustomObject>